# hexagonal_map_editor

./: .gitignore  CMakeLists.txt  README.md  hexagonal_map.pro  hexagonal_map_editor.pro  main.cpp  regulatory.cpp  regulatory.hpp
entity/adapter/: friend_gui_state_provider.hpp  gui_state_provider.cpp  gui_state_provider.hpp
entity/builder/: gui_builder.cpp
entity/controls/: mover.cpp  mover.hpp  zoomer.cpp  zoomer.hpp
entity/widgets/: context_panel.cpp  context_panel.hpp  hexgrid.hpp  qregular_polygon.cpp  qregular_polygon.hpp  toolpanel.hpp
form/: editor_window.cpp  editor_window.hpp  mainwindow.cpp  map_size_editor.cpp  map_size_editor.hpp
form/subform/: grid_sub_form.cpp  grid_sub_form.hpp  instrument_subform.cpp  instrument_subform.hpp  menu_sub_form.cpp  menu_sub_form.hpp  styles_view.cpp  styles_view.hpp
interfaces/: imap_saver.hpp  isubscriber.hpp  map_saver_base.hpp
parser/: map_parser.cpp  map_parser.hpp  map_styles_parser.cpp  map_styles_parser.hpp
resources/: resource_icons.qrc
saver/: map_saver.cpp  map_saver.hpp  png_map_saver.hpp  svg_map_saver.cpp  svg_map_saver.hpp
services/: hex_map_manager.cpp  hex_map_manager.hpp  loader_styles.cpp  loader_styles.hpp
src/: CMakeLists.txt  main.cpp  regulatory.cpp  regulatory.hpp
src/entity/: building_style.hpp  command_manager.cpp  command_manager.hpp  element_map.hpp  map_style.hpp  struct_map.hpp
src/entity/adapter/: friend_regulatory_state_provider.hpp  gui_state_provider.cpp  gui_state_provider.hpp  regulatory_state_provider.cpp  regulatory_state_provider.hpp  struct_map_adapter.cpp  struct_map_adapter.h
src/entity/builder/: gui_builder.cpp  gui_builder.hpp
src/entity/cmds/: change_building_command.cpp  change_building_command.hpp  change_color_command.cpp  change_color_command.hpp  change_style_command.cpp  change_style_command.hpp  clear_style_command.cpp  clear_style_command.hpp  fill_color_command.cpp  fill_color_command.hpp  grab_color_command.cpp  grab_color_command.hpp
src/entity/controls/: mover.cpp  mover.hpp  scene_click_handler.cpp  scene_click_handler.hpp  zoomer.cpp  zoomer.hpp
src/entity/widgets/: collapsible_panel.cpp  collapsible_panel.hpp  color_selector.cpp  color_selector.hpp  context_panel.cpp  context_panel.hpp  dual_color_widget.cpp  dual_color_widget.hpp  hexgrid.cpp  hexgrid.hpp  image_selector.cpp  image_selector.hpp  qregular_polygon.cpp  qregular_polygon.hpp  style_widget.cpp  style_widget.hpp  style_widget_group.cpp  style_widget_group.hpp  toolpanel.cpp  toolpanel.hpp
src/form/: editor_window.cpp  editor_window.hpp  map_size_editor.cpp  style_dialog.cpp  style_dialog.hpp
src/form/subform/: menu_sub_form.cpp  menu_sub_form.hpp
src/interfaces/: idual_color_selector.hpp  isubscriber.hpp  map_saver_base.hpp
src/parser/: map_buildings_parser.cpp  map_buildings_parser.hpp  map_parser.cpp  map_parser.hpp  map_styles_parser.cpp  map_styles_parser.hpp
src/saver/: map_saver.cpp  map_saver.hpp  png_map_saver.cpp  png_map_saver.hpp  svg_map_saver.cpp  svg_map_saver.hpp
src/services/: hex_map_manager.cpp  hex_map_manager.hpp  loader_styles.cpp  loader_styles.hpp
src/static/: action_types.hpp  project_types.hpp
src/worker/: async_map_worker.cpp  async_map_worker.hpp  async_style_loader.cpp  async_style_loader.hpp
static/: project_types.hpp  types.hpp
worker/: async_map_worker.cpp  async_map_worker.hpp
